gitignore:add project static media files for heroku

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 .vscode
 
 # Project Files/Folders
-*.mp3
-*.mp4
-*.png
-*.jpeg
-*.jpg
+# *.mp3
+# *.mp4
+# *.png
+# *.jpeg
+# *.jpg
 media/
 static/
 media_cdn/
