--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,11 @@
 # *.png
 # *.jpeg
 # *.jpg
-media/
-static/
-media_cdn/
-static_cdn/
-staticfiles/
+# media/
+# static/
+# media_cdn/
+# static_cdn/
+# staticfiles/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
