--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.0.1
 django-ckeditor==6.2.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
+django-social-share==2.2.1
 gunicorn==20.1.0
 mysqlclient==2.1.0
 Pillow==9.0.0
