--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ asgiref==3.4.1
 backports.zoneinfo==0.2.1
 Brotli==1.0.9
 dj-database-url==0.5.0
-Django==4.0.1
+Django==4.0.3
 django-ckeditor==6.2.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
+django-session-timeout==0.1.0
 django-social-share==2.2.1
 gunicorn==20.1.0
 mysqlclient==2.1.0
@@ -13,6 +14,7 @@ Pillow==9.0.0
 psycopg2==2.9.3
 python-decouple==3.5
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
 whitenoise==5.3.0
