--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
+bcrypt==3.2.0
 Brotli==1.0.9
+cffi==1.15.0
 dj-database-url==0.5.0
 Django==4.0.3
 django-ckeditor==6.2.0
@@ -12,6 +14,7 @@ gunicorn==20.1.0
 mysqlclient==2.1.0
 Pillow==9.0.0
 psycopg2==2.9.3
+pycparser==2.21
 python-decouple==3.5
 pytz==2021.3
 six==1.16.0
