--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.15.0
 dj-database-url==0.5.0
 Django==4.0.3
 django-ckeditor==6.2.0
+django-cors-headers==3.11.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
 django-session-timeout==0.1.0
