--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-heroku==0.3.1
 django-js-asset==1.2.2
 django-session-timeout==0.1.0
 django-social-share==2.2.1
+django-thread==0.0.1
 gunicorn==20.1.0
 mysqlclient==2.1.0
 Pillow==9.1.0
