--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,17 @@
-asgiref==3.4.1
-backports.zoneinfo==0.2.1
+asgiref==3.5.0
 bcrypt==3.2.0
-Brotli==1.0.9
 cffi==1.15.0
 dj-database-url==0.5.0
-Django==4.0.3
-django-ckeditor==6.2.0
-django-cors-headers==3.11.0
+Django==4.0.4
+django-ckeditor==6.4.0
 django-heroku==0.3.1
-django-js-asset==1.2.2
+django-js-asset==2.0.0
 django-session-timeout==0.1.0
-django-social-share==2.2.1
-django-thread==0.0.1
-gunicorn==20.1.0
-mysqlclient==2.1.0
 Pillow==9.1.0
 psycopg2==2.9.3
 pycparser==2.21
-python-decouple==3.5
-pytz==2021.3
+python-dotenv==0.20.0
 six==1.16.0
 sqlparse==0.4.2
-tzdata==2021.5
-whitenoise==5.3.0
+tzdata==2022.1
+whitenoise==6.0.0
