--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,8 @@ django-ckeditor==6.4.0
 django-heroku==0.3.1
 django-js-asset==2.0.0
 django-session-timeout==0.1.0
-django-social-share==2.2.1
 gunicorn==20.1.0
-mysqlclient==2.1.0
+# mysqlclient==2.1.0
 Pillow==9.1.0
 psycopg2==2.9.3
 pycparser==2.21
