--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,11 @@ django-heroku==0.3.1
 django-js-asset==2.0.0
 django-session-timeout==0.1.0
 gunicorn==20.1.0
-# mysqlclient==2.1.0
+mysqlclient==2.1.0
 Pillow==9.1.0
 psycopg2==2.9.3
 pycparser==2.21
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 six==1.16.0
 sqlparse==0.4.2
